--- a/src/GameMap.Network/GameMap.Network.csproj
+++ b/src/GameMap.Network/GameMap.Network.csproj
@@ -2,13 +2,14 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GameMap.Core\GameMap.Core.csproj" />
+    <ProjectReference Include="..\GameMap.Shared\GameMap.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="LiteNetLib" Version="1.3.1" />
+    <PackageReference Include="MemoryPack" Version="1.21.4" />
     <PackageReference Include="MagicOnion.Server" Version="7.0.6" />
-    <PackageReference Include="MemoryPack" Version="1.10.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.9.32" />
   </ItemGroup>
 
   <PropertyGroup>
