--- a/src/GameMap.Shared/GameMap.Shared.csproj
+++ b/src/GameMap.Shared/GameMap.Shared.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MagicOnion.Abstractions" Version="7.0.6" />
+    <PackageReference Include="MemoryPack" Version="1.10.0" />
+  </ItemGroup>
+
 </Project>
