Centralize package version management
Introduced `Directory.Packages.props` for centralized package version management, ensuring consistency and simplifying updates. Removed explicit package version declarations from all project files, delegating version control to the centralized file.

Simplified project configurations by centralizing `TargetFramework`, `ImplicitUsings`, and `Nullable` settings in shared configuration files. Updated `GameMap.sln` to include a new `build` folder with solution items for shared props files.

Refactored project files to improve maintainability and align with modern .NET best practices.

--- a/src/GameMap/GameMap.AppHost/GameMap.AppHost.csproj
+++ b/src/GameMap/GameMap.AppHost/GameMap.AppHost.csproj
@@ -4,15 +4,12 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
     <UserSecretsId>feaa8666-0ec3-4d97-ad14-dfe51c98c530</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.3.1" />
-    <PackageReference Include="Aspire.Hosting.Redis" Version="9.5.1" />
+    <PackageReference Include="Aspire.Hosting.AppHost" />
+    <PackageReference Include="Aspire.Hosting.Redis" />
   </ItemGroup>
 
   <ItemGroup>
